# digital_analyst

./: README.md  main.py  pyproject.toml  scraper.py
digital_analyst/: main.py  scraper.py
